Added Markdown support; introduce Processor type

--- a/shard.yml
+++ b/shard.yml
@@ -16,3 +16,5 @@ dependencies:
     github: straight-shoota/sass.cr
   crinja:
     github: straight-shoota/crinja
+  markd:
+    github: icyleaf/markd
