--- a/spec/fixtures/_config.default.yml
+++ b/spec/fixtures/_config.default.yml
@@ -1,4 +1,3 @@
----
 source: .
 destination: _site
 collections_dir: .
@@ -27,10 +26,7 @@ encoding: utf-8
 markdown_ext: markdown,mkdown,mkdn,mkd,md
 future: false
 unpublished: false
-excerpt_separator: '
-
-
-'
+excerpt_separator: "\n\n"
 detach: false
 port: 4000
 host: 127.0.0.1
